[package]
name = "fc-desktop"
version = "0.1.0"
edition = "2021"


[dependencies]
eframe = "0.23.0"
egui_extras = "0.23.0"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }

futures = {workspace = true}
tokio = {workspace = true}
tokio-tungstenite = {workspace = true}
futures-channel = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }

fc-command = { path = "../fc-command" }

[[bin]]
name = "client"
path = "src/bin/client.rs"