[package]
name = "fc-server"
version = "0.1.0"
edition = "2021"


[dependencies]
hyper = { version = "1.0.0-rc.4", default-features = false, features = ["server", "http1"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
tokio = { version = "1.33.0", default-features = false, features = ["io-std", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tokio-tungstenite = "0.20.1"
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures = "0.3.28"
url = "2.4.1"
bytes = "1.5.0"
http-body-util = "0.1.0-rc.3"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }

thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }

fc-command = { path = "../fc-command" }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cmd"
path = "src/bin/cmd.rs"