[package]
name = "fc-server"
version = "0.1.0"
edition = "2021"


[dependencies]
hyper = { version = "1.0.0-rc.4", default-features = false, features = ["server", "http1"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git", features = ["tokio"] }
tokio-stream = "0.1.14"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
bytes = "1.5.0"
http-body-util = "0.1.0-rc.3"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }

futures = {workspace = true}
tokio = {workspace = true}
tokio-tungstenite = {workspace = true}
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-channel = { workspace = true }
url = { workspace = true }

fc-command = { path = "../fc-command" }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cmd"
path = "src/bin/cmd.rs"